--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024, initial-scale=1.0">
     <title>IT Career Guide</title>
+    <link rel="icon" href="favicon.ico">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
@@ -90,7 +91,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 text-center">
-                            <img src="mnc.jpg" alt="Motivation Image 2" class="img-fluid rounded-circle">
+                            <img src="isro.png" alt="Motivation Image 2" class="img-fluid rounded-circle">
                         </div>
                     </div>
                     <hr class="motivation-line">
@@ -126,7 +127,7 @@
                             </div>
                         </div>
                         <div class="col-md-6 text-center">
-                            <img src="isro.png" alt="Motivation Image 4" class="img-fluid rounded-circle">
+                            <img src="mnc.jpg" alt="Motivation Image 4" class="img-fluid rounded-circle">
                         </div>
                     </div>
                     <hr class="motivation-line">
